#
# Copyright 2002, 2015 Seanodes Ltd http://www.seanodes.com. All rights
# reserved and protected by French, UK, U.S. and other countries' copyright laws.
# This file is part of Exanodes Unit test library and is subject to the terms
# and conditions defined in the LICENSE file which is present in the root
# directory of the project.
#

library_includedir = $(includedir)
library_include_HEADERS = unit_testing.h

binperldir=$(bindir)
binperl_SCRIPTS = ut_build

unitestingdir=$(datadir)/unit_testing
unitesting_DATA=ut_build_template.c

EXTRA_DIST = $(binperl_SCRIPTS) \
	     ut_build_template.c

